[gd_scene load_steps=4 format=3 uid="uid://bu2y75w5x8c0v"]

[ext_resource type="Script" uid="uid://d32qdsgdec3if" path="res://addons/modloader/permission_dialog.gd" id="1_abcde"]
[ext_resource type="PackedScene" uid="uid://bv7pmwitwepj" path="res://ui/controls/button/CustomButton.tscn" id="2_button"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0, 0, 0, 1)

[node name="PermissionDialog" type="CanvasLayer"]
layer = 10
script = ExtResource("1_abcde")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(500, 350)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 7
size_flags_vertical = 7
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(500, 350)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="MessageLabel" type="Label" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Mod [ModName] wants to do [Action]. Do you want to allow this?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="RememberCheckBox" type="CheckBox" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Remember my choice"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AllowButton" parent="Panel/VBoxContainer/HBoxContainer" instance=ExtResource("2_button")]
unique_name_in_owner = true
layout_mode = 2
text = "Allow"

[node name="DenyButton" parent="Panel/VBoxContainer/HBoxContainer" instance=ExtResource("2_button")]
unique_name_in_owner = true
layout_mode = 2
text = "Deny"
